# aws_apis

./: .gitignore  .ssml  Cargo.toml  EmailTemplateOfTesting.html  EmailTemplateOfnewsletter.html  README.md  attributes.json  f.txt  face.rs  sns_topic_arn.txt
TranscribeOutputs/: better.json  better.srt  better.vtt
neural/: Astrid_voice_audio.mpeg  Camila_voice_audio.mpeg  Carmen_voice_audio.mpeg  Cristiano_voice_audio.mpeg  Ewa_voice_audio.mpeg  Filiz_voice_audio.mpeg  Ines_voice_audio.mpeg  Jacek_voice_audio.mpeg  Jan_voice_audio.mpeg  Maja_voice_audio.mpeg  Maxim_voice_audio.mpeg  Ricardo_voice_audio.mpeg  Ruben_voice_audio.mpeg  Vitoria_voice_audio.mpeg
nneural/: Amy_voice_audio.mpeg  Aria_voice_audio.mpeg  Arlet_voice_audio.mpeg  Ayanda_voice_audio.mpeg  Bianca_voice_audio.mpeg  Brian_voice_audio.mpeg  Camila_voice_audio.mpeg  Elin_voice_audio.mpeg  Emma_voice_audio.mpeg  Gabrielle_voice_audio.mpeg  Hala_voice_audio.mpeg  Hannah_voice_audio.mpeg  Hiujin_voice_audio.mpeg  Ida_voice_audio.mpeg  Ines_voice_audio.mpeg  Isabelle_voice_audio.mpeg  Ivy_voice_audio.mpeg  Joanna_voice_audio.mpeg  Joey_voice_audio.mpeg  Justin_voice_audio.mpeg  Kajal_voice_audio.mpeg  Kazuha_voice_audio.mpeg  Kendra_voice_audio.mpeg  Kevin_voice_audio.mpeg  Kimberly_voice_audio.mpeg  Laura_voice_audio.mpeg  Lea_voice_audio.mpeg  Lisa_voice_audio.mpeg  Lucia_voice_audio.mpeg  Lupe_voice_audio.mpeg  Mia_voice_audio.mpeg  Niamh_voice_audio.mpeg  Ola_voice_audio.mpeg  Olivia_voice_audio.mpeg  Ruth_voice_audio.mpeg  Salli_voice_audio.mpeg  Seoyeon_voice_audio.mpeg  Sergio_voice_audio.mpeg  Sofie_voice_audio.mpeg  Stephen_voice_audio.mpeg  (+7 more)
src/: amplify.rs  aws_polly.rs  credentials.rs  dynamodb.rs  lib.rs  memorydb_ops.rs  pdf_writer.rs  pinpoint_ops.rs  rds_ops.rs  rekognition_ops.rs  route53.rs  s3_ops.rs  sesv2_ops.rs  sns_ops.rs  transcribe_ops.rs  translate_ops.rs
standard/: Aditi_voice_audio.mpeg  Amy_voice_audio.mpeg  Bianca_voice_audio.mpeg  Brian_voice_audio.mpeg  Carla_voice_audio.mpeg  Celine_voice_audio.mpeg  Chantal_voice_audio.mpeg  Conchita_voice_audio.mpeg  Dora_voice_audio.mpeg  Emma_voice_audio.mpeg  Enrique_voice_audio.mpeg  Geraint_voice_audio.mpeg  Giorgio_voice_audio.mpeg  Gwyneth_voice_audio.mpeg  Hans_voice_audio.mpeg  Ivy_voice_audio.mpeg  Joanna_voice_audio.mpeg  Joey_voice_audio.mpeg  Justin_voice_audio.mpeg  Karl_voice_audio.mpeg  Kendra_voice_audio.mpeg  (+25 more)
(+8 files in other folders)
