[package]
name = "aws_apis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name ="testing_apis"
path="./main.rs"


[dependencies]

colored="2.0.4"
chrono ="0.4.28"
fast_qr = {version = "0.10.2",features = ["image"]}

tokio = {version ="1.32.0",features = ["macros","rt-multi-thread"]}
tokio-stream = "0.1.14"
aws-config = "0.56.0"
aws-sdk-s3 = "0.30.0"
aws-sdk-sesv2 = "0.30.0"
aws-sdk-rds ="0.30.0"
aws-sdk-memorydb ="0.30.0"
aws-credential-types = "0.56.1"
aws-types = "0.56.1"
