[package]
name = "aws_apis"
version = "0.1.0"
edition = "2021"
authors = ["Sanjeevi M <sanjeevimani567@gmail.com>"]
keywords = ["sesv2", "aws","memorydb","Rds","s3","polly","High level"]
repository = "https://github.com/Sanjuvi/aws_apis"
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name ="testing_apis"
path="./main.rs"

[dependencies]
colored={version = "2.0.4"}
aws-credential-types = {version = "0.56.1"}
aws-config = {version ="0.56.0"}
aws-types = {version ="0.56.1"}
tokio = {package = "tokio",version ="1.32.0",features = ["macros","rt-multi-thread"]}
tokio-stream = {version = "0.1.14"}
spinoff ="0.8.0"
filesize = "0.2.0"
indicatif ="0.17.7"

chrono ={version = "0.4.28"}
fast_qr = {version = "0.10.2",features = ["image"]}
dotenv = "0.15.0"
genpdf ={version ="0.2.0",features = ["images"]}
printpdf ="0.3.4"

#writing text on images ,details from rekognition apis
image ="0.24.7"
imageproc ="0.23.0"
rusttype ="0.9.3"
serde_json = "1.0"
image_compressor = "1.3.0"

aws-sdk-s3 = {version ="0.31.1"}
aws-sdk-sesv2 = {version = "0.30.0"}
aws-sdk-rds ={version ="0.30.0"}
aws-sdk-memorydb ={version = "0.30.0"}
aws-sdk-polly ="0.31.1"
aws-sdk-pinpoint ="0.30.0"
aws-sdk-sns ="0.30.0"
aws-sdk-rekognition="0.30.0"
aws-sdk-transcribe ="0.30.0"
aws-sdk-route53 ="0.30.0"
aws-sdk-dynamodb = "0.31.1"

#Regex is employed for locating template variables within the provided data, especially when updating a template. 
# This is particularly useful for providing information about the template during updates. It is also utilized in 
#the utility function called get_template_variables within S3 operations
regex ="1.9.5"